# portals-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  auth0.der  auth0_pkey.pem  cert.crt  notes.md  rustfmt.toml  scratchpad.md  sqlx-data.json
migrations/: 20210729173000_functions.sql  20210729173847_roles.sql  20210729212747_users.sql  20210819220322_portalviews.sql  20210819221141_structures.sql  20210819221838_orgs.sql  20210819221849_portals.sql  20210819221856_cells.sql  20210819221900_blocks.sql  20210819221911_dimensions.sql  20210923085938_integrations.sql  20211019202753_projects.sql  20211019203148_pages.sql  20211019212730_dashboards.sql  20211019230035_user_project.sql  20211025215952_connections.sql  20211025215958_sources.sql  20211025221814_sourcequeries.sql  20211104080251_user_access.sql  20211111012857_policies.sql  20211122035417_user_access.sql  20211209182905_files.sql
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2019-08-05-035440_create_users/: down.sql  up.sql
migrations/2019-08-27-230034_create_orgs/: down.sql  up.sql
migrations/2019-09-02-022053_create_users/: up.sql
migrations/2019-09-02-022059_create_orgs/: up.sql
migrations/2019-09-03-064508_create_portals/: down.sql  up.sql
migrations/2019-10-01-053747_create_portalviews/: down.sql  up.sql
migrations/2019-10-01-053850_create_blocks/: up.sql
migrations/2020-01-29-061126_create_cells/: down.sql  up.sql
migrations/2020-01-30-073158_create_dimensions/: down.sql  up.sql
proc_macros/json_payload_derive/: Cargo.toml
proc_macros/json_payload_derive/src/: lib.rs
src/: config.rs  db.rs  main.rs  schema.rs
src/extractors/: auth0_user_id.rs  mod.rs
src/graphql/: context.rs  graphql_routes.rs  juniper_actix.rs  mod.rs
src/graphql/loaders/: dashboard_loader.rs  mod.rs  org_loader.rs  structure_loader.rs  user_loader.rs
src/graphql/schema/: block.rs  cell.rs  connection.rs  connection_content.rs  dashboard.rs  dimension.rs  email.rs  file.rs  integration.rs  misc.rs  mod.rs  mutation.rs  org.rs  page.rs  policy.rs  portal.rs  portalview.rs  project.rs  query.rs  query_options.rs  role.rs  s3.rs  source.rs  sourcequery.rs  structure.rs  user.rs
src/graphql/schema/block_configs/: cells_block_config.rs  empty_block_config.rs  files_block_config.rs  mod.rs  table_block_config.rs  text_block_config.rs  xy_chart_block_config.rs
src/graphql/schema/blocks/: basic_table_block.rs  cells_block.rs  empty_block.rs  files_block.rs  integration_block.rs  mod.rs  owner_text_block.rs  table_block.rs  text_block.rs  vendor_single_cell_block.rs  vendor_text_block.rs  xy_chart_block.rs
src/graphql/schema/cells/: basic_text_cell.rs  empty_cell.rs  google_sheets_cell.rs  mod.rs  owner_text_cell.rs
src/graphql/schema/dimensions/: basic_table_column_dimension.rs  basic_table_row_dimension.rs  empty_dimension.rs  google_sheets_column_dimension.rs  google_sheets_dimension.rs  google_sheets_row_dimension.rs  mod.rs  owner_text_dimension.rs  portal_member_dimension.rs
src/graphql/schema/integrations/: google_sheets.rs  mod.rs
src/graphql/schema/sourcequeries/: block_sourcequery.rs  cells_block_sourcequery.rs  files_block_sourcequery.rs  mod.rs  table_block_sourcequery.rs  text_block_sourcequery.rs  xy_chart_block_sourcequery.rs
src/graphql/schema/sources/: block_source.rs  empty_source.rs  mod.rs
src/middleware/: auth.rs
src/models/: block.rs  cell.rs  db_block.rs  db_org.rs  dimension.rs  mod.rs  org.rs  portal.rs  portalview.rs  user.rs
src/models/blocks/: mod.rs
src/queries/: user_queries.rs
src/routes/: blocks.rs  cells.rs  dimensions.rs  general_routes.rs  mod.rs  orgs.rs  portals.rs  portalviews.rs  user.rs  users.rs  utility.rs
src/services/: auth0_service.rs  email_service.rs  google_sheets_service.rs  integration_service.rs  meltano_service.rs  mod.rs  s3_service.rs
src/services/db/: block_service.rs  cell_service.rs  connection_content_service.rs  connection_service.rs  dashboard_service.rs  db.rs  dimension_service.rs  file_service.rs  integration_service.rs  mod.rs  org_service.rs  page_service.rs  policy_service.rs  portal_service.rs  portalview_service.rs  project_service.rs  role_service.rs  source_service.rs  sourcequery_service.rs  structure_service.rs  user_service.rs
src/utils/: async_block.rs  general.rs  ir.rs  mod.rs  state_manager.rs
