[package]
name = "torus-backend"
version = "0.1.0"
authors = ["Broch Stilley <brochington@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
json_payload_derive = { path = "./proc_macros/json_payload_derive" }
actix-web = "4.0.0-beta.8"
actix-web-codegen = "0.5.0-beta.3"
actix-cors = "0.6.0-beta.2"
actix-utils = "3.0.0"
actix-service = "2.0.0"
actix-web-httpauth = "0.6.0-beta.2"
# diesel = { version = "1.4.3", features = ["postgres", "r2d2", "chrono", "uuidv07", "serde_json"] }
dotenv = "0.14.1"
serde = { version = "1.0.126", features = ["derive"]}
serde_derive = "1.0.126"
serde_json = "1.0.64"
listenfd = "0.3.3"
futures = "0.3.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
jsonwebtoken = "7.2.0"
reqwest = { version = "0.11.3", features = ["json"] }
url = "2.1.0"
percent-encoding = "2.1.0"
chrono = { version = "0.4.9", features = ["serde"] }
serde_qs = "0.5"
log = "0.4.8"
env_logger = "0.7.1"
rusoto_core = "0.44.0"
rusoto_ses = { version = "0.44.0", features = ["serialize_structs"] }
time = "0.2.26"
juniper = "0.15.7"
juniper_actix = "0.4.0"
sqlx = { version = "0.5.5", features = ["postgres", "uuid", "json", "chrono", "runtime-actix-native-tls", "offline"] }
dataloader = "0.14.0"
async-trait = "0.1.50"
strum = "0.20.0"
strum_macros = "0.20.1"
base64 = "0.13.0"
derive_more = "0.99.16"

[features]
default = []
local_dev = []
