[package]
authors = ["Broch Stilley <brochington@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "portals-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0-beta.2"
actix-service = "2.0.0"
actix-utils = "3.0.0"
actix-web = "4.0.0-beta.9"
actix-web-codegen = "0.5.0-beta.4"
actix-web-httpauth = "0.6.0-beta.2"
anyhow = "1.0.44"
async-trait = "0.1.51"
base64 = "0.13.0"
chrono = {version = "0.4.19", features = ["serde"]}
color-backtrace = "0.5.1"
dataloader = "0.14.0"
derive_more = "0.99.16"
env_logger = "0.9.0"
futures = "0.3.17"
json_payload_derive = {path = "./proc_macros/json_payload_derive"}
jsonwebtoken = "7.2.0"
juniper = "0.15.7"
juniper_actix = "0.4.0"
log = "0.4.14"
once_cell = "1.8.0"
percent-encoding = "2.1.0"
reqwest = {version = "0.11.4", features = ["json"]}
ron = "0.6.5"
rusoto_core = "0.47.0"
rusoto_ses = {version = "0.47.0", features = ["serialize_structs"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_derive = "1.0.130"
serde_json = "1.0.67"
serde_qs = "0.8.4"
sqlx = {version = "0.5.9", features = ["postgres", "uuid", "json", "chrono", "runtime-actix-native-tls", "offline"]}
strum = "0.21.0"
strum_macros = "0.21.1"
time = "0.3.2"
url = "2.2.2"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
openssl-probe = "0.1.2"

[build-dependencies]
built = {version = "0.5.1", features = ["chrono", "git2"]}
