[package]
name = "json_payload_derive"
version = "0.1.0"
authors = ["Broch Stilley <brochington@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.5"
quote = "1.0.2"
futures = "0.3.1"
